src/pages/automate/connectedChannels/components/FlowSettingsItem.less
@import (reference) '~@gorgias/design-tokens/dist/css/layout.less';
@import (reference) '~css/typography.less';

:local {
    .workflowTriggerName {
        .caption-regular();
        color: var(--neutral-grey-5);
        font-size: 12px;
    }

    .dragIcon {
        color: var(--neutral-grey-5);
        cursor: grab;
        font-size: 20px !important;
    }

    .container {
        display: flex;
        flex-direction: column;
        gap: var(--layout-spacing-xxs);
        &:not(:last-child) {
            padding-bottom: var(--layout-spacing-xs);
            margin-bottom: var(--layout-spacing-xs);
            border-bottom: 1px solid var(--neutral-grey-2);
        }
    }

    .workflowListItem {
        display: flex;
        align-items: center;
        gap: var(--layout-spacing-s);
    }

    .workflowListItemButtons {
        flex: 1;
        display: flex;
        justify-content: flex-end;
        gap: var(--layout-spacing-xxs);
    }

    .workflowListItemContent {
        display: flex;
        align-items: center;
        gap: var(--layout-spacing-xxs);
    }

    .warningIcon {
        color: var(--feedback-warning);
        font-size: 16px !important;
    }
}

